--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
   - npm install
 
 script:
-  - npm run test --watch=false
+  - ng test --coverage  --coverageReporters=text-lcov | node node_modules/coveralls/bin/coveralls.js
