--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ speed-measure-plugin*.json
 /.sass-cache
 /connect.lock
 /coverage
+/test-report.html
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
