--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@angular/core": "^8.2.14",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
@@ -26,7 +25,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "widget": "0.0.1",
+    "widget": "file:../parking-widget/dist/widget",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
