Allowed tests to compile again.

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
+    "allowJs": true,
+    "esModuleInterop": true,
     "types": [
       "jest",
       "node"
