--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - npm install
   - ng build widget
   - cd ../..
+  - sudo chown -R $USER node_modules/widget
   - npm install
 
 script:
