--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "coveralls": "^3.0.7",
     "jest": "^24.9.0",
     "jest-html-reporter": "^2.7.0",
+    "ngx-translate-testing": "^3.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
