--- a/package.json
+++ b/package.json
@@ -11,39 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/common": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/core": "^9.0.0",
+    "@angular/animations": "^9.0.5",
+    "@angular/cdk": "^9.1.1",
+    "@angular/common": "^9.0.5",
+    "@angular/compiler": "^9.0.5",
+    "@angular/core": "^9.0.5",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "^9.0.0",
-    "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/router": "^9.0.0",
+    "@angular/forms": "^9.0.5",
+    "@angular/material": "^9.1.1",
+    "@angular/platform-browser": "^9.0.5",
+    "@angular/platform-browser-dynamic": "^9.0.5",
+    "@angular/router": "^9.0.5",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
+    "widget": "0.0.1",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^8.2.0",
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular/cli": "~9.0.1",
-    "@angular/compiler-cli": "~9.0.0",
-    "@angular/language-service": "~9.0.0",
-    "@ngneat/spectator": "^4.5.2",
-    "@types/jest": "^24.0.23",
+    "@angular-builders/jest": "^8.3.2",
+    "@angular-devkit/build-angular": "^0.900.5",
+    "@angular/cli": "^9.0.5",
+    "@angular/compiler-cli": "^9.0.5",
+    "@angular/language-service": "^9.0.5",
+    "@ngneat/spectator": "^4.11.1",
+    "@types/jest": "^24.9.1",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "coveralls": "^3.0.7",
+    "codelyzer": "^5.2.1",
+    "coveralls": "^3.0.9",
     "jest": "^24.9.0",
-    "jest-html-reporter": "^2.7.0",
+    "jest-html-reporter": "^2.8.0",
     "ngx-translate-testing": "^3.0.0",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
